removed GUI strings into properties file for ResourceBundle

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -1,6 +1,15 @@
 #
 # Turtle Commands
 #
+
+submitButtonTitle=Submit
+addWorkspaceButtonTitle=Add Workspace
+backgroundButtonText=Choose Background Color
+turtleImageButtonText=Choose Turtle Image
+workspaceTitle=Workspace #
+penColorButtonTitle=Choose Pen Color
+penSliderTitle=Change Pen Size
+
 Forward = forward,fd
 Backward = back,bk
 Left = left,lt
