--- a/src/resources/languages/TestFile.properties
+++ b/src/resources/languages/TestFile.properties
@@ -1,2 +1,7 @@
-submit=Submit
-addWorkspace=Add Workspace
+submitButtonTitle=Submit
+addWorkspaceButtonTitle=Add Workspace
+backgroundButtonText=Choose Background Color
+turtleImageButtonText=Choose Turtle Image
+workspaceTitle=Workspace #
+penColorButtonTitle=Choose Pen Color
+penSliderTitle=Change Pen Size
