Added DivideByZero InvalidLogoSyntax and NullInput Exceptions as subclass of SLogoException which all reference a properties file to generate message

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -97,3 +97,11 @@ ListStart = [
 ListEnd = ]
 GroupStart = (
 GroupEnd = )
+
+#
+#Errors
+#
+
+invalidLogoSynatx=You entered invalid Logo syntax. Please enter a valid input.
+divideByZero=You cannot divide by zero.  Please enter a valid input.
+nullInput=You didn't enter anything.  Please enter a valid input.
