toggle grid lines feature

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -9,6 +9,7 @@ turtleImageButtonText=Choose Turtle Image
 workspaceTitle=Workspace #
 penColorButtonTitle=Choose Pen Color
 penSliderTitle=Change Pen Size
+gridLinesButtonTitle=Toggle Grid Lines
 
 Forward = forward,fd
 Backward = back,bk
