working on merge conflicts

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -102,6 +102,6 @@ GroupEnd = )
 #Errors
 #
 
-invalidSLogoSynatx=You entered invalid Logo syntax. Please enter a valid input.
-divideByZero=You cannot divide by zero.  Please enter a valid input.
-nullInput=You didn't enter anything.  Please enter a valid input.
+invalidSLogoSyntax=\n\nYou entered invalid SLogo syntax. Please enter a valid input.\n
+divideByZero=\n\nYou cannot divide by zero.  Please enter a valid input.\n
+nullInput=\n\nYou didn't enter anything.  Please enter a valid input.\n
