--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -1,7 +1,6 @@
 #
-# Turtle Commands
+# GUI Text Constants
 #
-
 submitButtonTitle=Submit
 addWorkspaceButtonTitle=Add Workspace
 backgroundButtonText=Choose Background Color
@@ -9,7 +8,9 @@ turtleImageButtonText=Choose Turtle Image
 workspaceTitle=Workspace #
 penColorButtonTitle=Choose Pen Color
 penSliderTitle=Change Pen Size
-
+#
+# Turtle Commands
+#
 Forward = forward,fd
 Backward = back,bk
 Left = left,lt
