200th TEAM COMMIT :) just made hella shells for us to fill in quick.

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -90,6 +90,12 @@ Tell = tell
 Ask = ask
 AskWith = askwith
 #
+#
+#
+OnClick = onclick,click
+OnMove = onmove,move
+OnKey = onkey,key
+#
 # Langauge syntax
 #
 Comment = # 
