updating resource bundle and implemented multiple languages

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -9,6 +9,15 @@ workspaceTitle=Workspace #
 penColorButtonTitle=Choose Pen Color
 penSliderTitle=Change Pen Size
 gridLinesButtonTitle=Toggle Grid Lines
+helpPageURL=http://www.cs.duke.edu/courses/compsci308/current/assign/03_slogo/commands.php
+dashedPenButtonTitle=Dashed Pen
+dottedPenButtonTitle=Dotted Pen
+solidPenButtonTitle=Solid Pen
+helpPageTitle=Help Page
+keyControllerButtonTitle=Activate Key Controls
+keyControllerMessage=Use W A S D to move, SHIFT to toggle pen up and down
+showTurtleButtonTitle=Show/Hide Active Turtles
+
 
 #
 # Turtle Commands
