--- a/src/resources/languages/French.properties
+++ b/src/resources/languages/French.properties
@@ -1,4 +1,24 @@
 #
+# GUI Text Constants
+#
+submitButtonTitle=baugette
+addWorkspaceButtonTitle=crepe
+backgroundButtonText=voila
+turtleImageButtonText=touche
+workspaceTitle=engard
+penColorButtonTitle=banana
+penSliderTitle=yelp
+gridLinesButtonTitle=fwelp
+helpPageURL=http://www.france.fr/en.html
+dashedPenButtonTitle=mario
+dottedPenButtonTitle=luigi
+solidPenButtonTitle=Stinky Dinkey
+helpPageTitle=Help moi
+keyControllerButtonTitle=herp
+keyControllerMessage=a derp
+showTurtleButtonTitle=napoleon
+
+#
 # Turtle Commands
 #
 Forward = devant,dev
