active turtles can be added/removed by click, and will be highlighted when activated

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -17,6 +17,7 @@ helpPageTitle=Help Page
 keyControllerButtonTitle=Activate Key Controls
 keyControllerMessage=Use W A S D to move, SHIFT to toggle pen up and down
 showTurtleButtonTitle=Show/Hide Active Turtles
+addTurtleTitle=Add New Turtle
 
 
 #
