--- a/src/resources/languages/French.properties
+++ b/src/resources/languages/French.properties
@@ -17,6 +17,7 @@ helpPageTitle=Help moi
 keyControllerButtonTitle=herp
 keyControllerMessage=a derp
 showTurtleButtonTitle=napoleon
+addTurtleTitle=croissant
 
 #
 # Turtle Commands
