--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -125,3 +125,5 @@ GroupEnd = )
 invalidSLogoSyntax=\n\nYou entered invalid SLogo syntax. Please enter a valid input.\n
 divideByZero=\n\nYou cannot divide by zero.  Please enter a valid input.\n
 nullInput=\n\nYou didn't enter anything.  Please enter a valid input.\n
+fxmlException=\n\nError reading FXML file. Please submit a valid FXML file.\n
+propertiesException=\n\nAn Error occurred in the loading of the properties File.\n
