--- a/src/resources/languages/ClassType.properties
+++ b/src/resources/languages/ClassType.properties
@@ -44,7 +44,7 @@ application.slogonode.DisplayCommands.ClearStamps = ClearStamps
 application.slogonode.DisplayCommands.PenColor = PenColor
 application.slogonode.DisplayCommands.SetBackgroundNode = SetBackground
 application.slogonode.DisplayCommands.SetIndexNode = SetIndex
-application.slogonode.DisplayCommands.SetPaletteNode = SetPaletter
+application.slogonode.DisplayCommands.SetPaletteNode = SetPalette
 application.slogonode.DisplayCommands.SetPenColorNode = SetPenColor
 application.slogonode.DisplayCommands.SetPenSizeNode = SetPenSize
 application.slogonode.DisplayCommands.SetShapeNode = SetShape
