--- a/src/resources/languages/ClassType.properties
+++ b/src/resources/languages/ClassType.properties
@@ -50,8 +50,7 @@ application.slogonode.DisplayCommands.SetPenSizeNode = SetPenSize
 application.slogonode.DisplayCommands.SetShapeNode = SetShape
 application.slogonode.DisplayCommands.ShapeNode = Shape
 application.slogonode.DisplayCommands.StampNode = Stamp
-
-
-
-
-
+application.slogonode.PunctuationNode.GroupEndNode = GroupEnd
+application.slogonode.PunctuationNode.GroupStartNode = GroupStart
+application.slogonode.PunctuationNode.ListEndNode = ListEnd
+application.slogonode.PunctuationNode.ListStartNode = ListStart
