--- a/src/resources/languages/ClassType.properties
+++ b/src/resources/languages/ClassType.properties
@@ -10,6 +10,16 @@ application.slogonode.ControlStructures.ForNode = For
 application.slogonode.ControlStructures.IfElseNode = IfElse
 application.slogonode.ControlStructures.IfNode = If
 application.slogonode.ControlStructures.RepeatNode = Repeat
+application.slogonode.DisplayCommands.ClearStamps = ClearStamps
+application.slogonode.DisplayCommands.PenColor = PenColor
+application.slogonode.DisplayCommands.SetBackgroundNode = SetBackground
+application.slogonode.DisplayCommands.SetIndexNode = SetIndex
+application.slogonode.DisplayCommands.SetPaletteNode = SetPalette
+application.slogonode.DisplayCommands.SetPenColorNode = SetPenColor
+application.slogonode.DisplayCommands.SetPenSizeNode = SetPenSize
+application.slogonode.DisplayCommands.SetShapeNode = SetShape
+application.slogonode.DisplayCommands.ShapeNode = Shape
+application.slogonode.DisplayCommands.StampNode = Stamp
 application.slogonode.MathOperations.AtanNode = Atan
 application.slogonode.MathOperations.CosNode = Cos
 application.slogonode.MathOperations.DifferenceNode = Difference
@@ -23,6 +33,12 @@ application.slogonode.MathOperations.RemainderNode = Remainder
 application.slogonode.MathOperations.SinNode = Sin
 application.slogonode.MathOperations.SumNode = Sum
 application.slogonode.MathOperations.TanNode = Tan 
+application.slogonode.PunctuationNode.GroupNode = Group
+application.slogonode.PunctuationNode.GroupEndNode = GroupEnd
+application.slogonode.PunctuationNode.GroupStartNode = GroupStart
+application.slogonode.PunctuationNode.ListNode = List
+application.slogonode.PunctuationNode.ListEndNode = ListEnd
+application.slogonode.PunctuationNode.ListStartNode = ListStart
 application.slogonode.TurtleCommands.BackwardNode = Backward
 application.slogonode.TurtleCommands.ClearScreenNode = ClearScreen
 application.slogonode.TurtleCommands.DisplayTurtleNode = DisplayTurtle
@@ -40,17 +56,4 @@ application.slogonode.TurtleCommands.SetHeadingNode = SetHeading
 application.slogonode.TurtleCommands.SetPositionNode = SetPosition
 application.slogonode.TurtleCommands.SetTowardsNode = SetTowards
 application.slogonode.TurtleCommands.ShowTurtleNode = ShowTurtle
-application.slogonode.DisplayCommands.ClearStamps = ClearStamps
-application.slogonode.DisplayCommands.PenColor = PenColor
-application.slogonode.DisplayCommands.SetBackgroundNode = SetBackground
-application.slogonode.DisplayCommands.SetIndexNode = SetIndex
-application.slogonode.DisplayCommands.SetPaletteNode = SetPalette
-application.slogonode.DisplayCommands.SetPenColorNode = SetPenColor
-application.slogonode.DisplayCommands.SetPenSizeNode = SetPenSize
-application.slogonode.DisplayCommands.SetShapeNode = SetShape
-application.slogonode.DisplayCommands.ShapeNode = Shape
-application.slogonode.DisplayCommands.StampNode = Stamp
-application.slogonode.PunctuationNode.GroupEndNode = GroupEnd
-application.slogonode.PunctuationNode.GroupStartNode = GroupStart
-application.slogonode.PunctuationNode.ListEndNode = ListEnd
-application.slogonode.PunctuationNode.ListStartNode = ListStart
+
