--- a/src/resources/languages/ClassType.properties
+++ b/src/resources/languages/ClassType.properties
@@ -33,11 +33,12 @@ application.slogonode.MathOperations.RemainderNode = Remainder
 application.slogonode.MathOperations.SinNode = Sin
 application.slogonode.MathOperations.SumNode = Sum
 application.slogonode.MathOperations.TanNode = Tan 
-application.slogonode.PunctuationNode.GroupNode = Group
 application.slogonode.PunctuationNode.GroupEndNode = GroupEnd
+application.slogonode.PunctuationNode.GroupNode = Group
 application.slogonode.PunctuationNode.GroupStartNode = GroupStart
-application.slogonode.PunctuationNode.ListNode = List
+application.slogonode.PunctuationNode.PunctuationNode = Punctuation
 application.slogonode.PunctuationNode.ListEndNode = ListEnd
+application.slogonode.PunctuationNode.ListNode = List
 application.slogonode.PunctuationNode.ListStartNode = ListStart
 application.slogonode.TurtleCommands.BackwardNode = Backward
 application.slogonode.TurtleCommands.ClearScreenNode = ClearScreen
