french properties written and some extra javadoc broooooo

--- a/src/resources/languages/French.properties
+++ b/src/resources/languages/French.properties
@@ -1,23 +1,23 @@
 #
 # GUI Text Constants
 #
-submitButtonTitle=baugette
-addWorkspaceButtonTitle=crepe
-backgroundButtonText=voila
-turtleImageButtonText=touche
-workspaceTitle=engard
-penColorButtonTitle=banana
-penSliderTitle=yelp
-gridLinesButtonTitle=fwelp
+submitButtonTitle=Soumettre
+addWorkspaceButtonTitle=Nouvel espace de travail
+backgroundButtonText=Choisir la couleur d'arrière-plan
+turtleImageButtonText=Choisir l'image de la tortue
+workspaceTitle=Espace de travail #
+penColorButtonTitle=Choisir la couleur de stylo
+penSliderTitle=Changez la taille de la plume
+gridLinesButtonTitle=Lignes de la grille bascule
 helpPageURL=http://www.france.fr/en.html
-dashedPenButtonTitle=mario
-dottedPenButtonTitle=luigi
-solidPenButtonTitle=Stinky Dinkey
-helpPageTitle=Help moi
-keyControllerButtonTitle=herp
-keyControllerMessage=a derp
-showTurtleButtonTitle=napoleon
-addTurtleTitle=croissant
+dashedPenButtonTitle=Stylo pointillé
+dottedPenButtonTitle=Stylo pointillé
+solidPenButtonTitle=Plume solide
+helpPageTitle=La page d'aide
+keyControllerButtonTitle=Activer les contrôles clés
+keyControllerMessage=Utilisez WASD pour se déplacer, SHIFT pour basculer stylo de haut en bas
+showTurtleButtonTitle=Afficher / Masquer les tortues actifs
+addTurtleTitle=Ajouter de nouvelles tortues
 
 #
 # Turtle Commands
@@ -109,3 +109,14 @@ ListStart = [
 ListEnd = ]
 GroupStart = (
 GroupEnd = )
+
+#
+#Errors
+#
+
+
+invalidSLogoSyntax=\n\nYou entered invalid SLogo syntax. Please enter a valid input.\n
+divideByZero=\n\nYou cannot divide by zero.  Please enter a valid input.\n
+nullInput=\n\nYou didn't enter anything.  Please enter a valid input.\n
+fxmlException=\n\nError reading FXML file. Please submit a valid FXML file.\n
+propertiesException=\n\nAn Error occurred in the loading of the properties File.\n
